<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginActivity">

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_86"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:textSize="@dimen/font_size_14"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSenhaLogin"/>

    <Button
        android:id="@+id/bvBotaoLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/hint_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCriarConta" />

</androidx.constraintlayout.widget.ConstraintLayout>