<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.view.RegisterActivity">

    <EditText
        android:id="@+id/etNomeUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_86"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:hint="@string/hint_nome"
        android:inputType="text"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmailRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeUsuario"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etSenhaRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegistro"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bvBotaoRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/registrar"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaRegistro"/>

</androidx.constraintlayout.widget.ConstraintLayout>